<resources>
    <string name="app_name">FoodApp</string>
    <string name="khana_recipe">KHANA RECIPE</string>
    <string name="cook_in_easy_way">Cook in easy way</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="register_now"> Register Now</string>
    <string name="welcome_denny">Welcome <font fgcolor='#FF6B00'>Denny</font></string>
    <string name="cooking_today">What would you like to cook today?</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="today_s_fresh_recipe">Today\'s Fresh Recipe</string>
    <string name="see_all">See All</string>
    <string name="breakfast">Breakfast</string>
    <string name="toast_with_berries">Toast with Berries</string>
    <string name="ingredients">Ingredients</string>
    <string name="video">Video</string>
</resources>